[tests] stricter `JUnitDevkitPatcherTest` assertion
GitOrigin-RevId: e0f24e00615f22ea08df8b720f4c317bf3f28eee